lamp-stack.yaml
AWSTemplateFormatVersion: '2010-09-09'
Description: AWS CloudFormation template to deploy a LAMP stack

Parameters:
  KeyName:
    Description: Name of an existing EC2 KeyPair to enable SSH access to the instances
    Type: 'AWS::EC2::KeyPair::KeyName'
    ConstraintDescription: Must be the name of an existing EC2 KeyPair..

Resources:
  WebServerInstance:
    Type: 'AWS::EC2::Instance'
    Properties:
      InstanceType: t2.micro
      KeyName: !Ref KeyName
      ImageId: ami-0c55b159cbfafe1f0 # Amazon Linux 2 AMI
      SecurityGroups:
        - !Ref InstanceSecurityGroup
      UserData:
        Fn::Base64: !Sub |
          #!/bin/bash
          yum update -y
          yum install -y httpd mysql php php-mysqlnd git
          systemctl start httpd
          systemctl enable httpd
          cd /var/www/html
          git clone https://github.com/yourusername/your-repo.git
          cd your-repo
          mv * ../
          cd ..
          rm -rf your-repo
          chown -R apache:apache /var/www/html

  InstanceSecurityGroup:
    Type: 'AWS::EC2::SecurityGroup'
    Properties:
      GroupDescription: Enable SSH and HTTP access
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: '22'
          ToPort: '22'
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: '80'
          ToPort: '80'
          CidrIp: 0.0.0.0/0

Outputs:
  InstanceId:
    Description: Instance ID of the newly created EC2 instance
    Value: !Ref WebServerInstance
  PublicIP:
    Description: Public IP address of the newly created EC2 instance
    Value: !GetAtt WebServerInstance.PublicIp
